# tidal-mcp

./: .gitignore  LICENSE  README.md  main.py  play.ipynb  pyproject.toml
mcp_server/: server.py  utils.py
tidal_api/: app.py  browser_session.py  utils.py
